Fix typo in very first command

--- a/views/main.html
+++ b/views/main.html
@@ -29,7 +29,7 @@
     <section>
         <h3>How do I use generator-boomerang?</h3>
         <p>You'll first have to setup yeoman. If you have Node.js installed it is as easy as running ...</p>
-        <p><pre>nmp install -g yo</pre></p>
+        <p><pre>npm install -g yo</pre></p>
         <p>If you need help setting up node or yeoman check out their <a href="https://github.com/yeoman/yeoman/wiki/Getting-Started">getting started guide</a></p>
     </section>
 
