Fix swapped src & href - in the second place it was copy/pasted

--- a/app/templates/boomerang/_news.html
+++ b/app/templates/boomerang/_news.html
@@ -9,8 +9,8 @@
 
             <ul class="thumbnails">
                 <li ng-repeat="tn in article.thumbnails">
-                    <a ng-href="{{ tn.url }}">
-                        <img ng-src="{{ tn.link }}" />
+                    <a ng-href="{{ tn.link }}">
+                        <img ng-src="{{ tn.url }}" />
                     </a>
                 </li>
             </ul>
